2003/09/10 14:24 ebassi
	
	* xs/GnomeFontFace.xs: implemented:
		gnome_font_face_find,
		gnome_font_face_find_closest,
		gnome_font_face_find_closest_from_weight_slant,
		gnome_font_face_find_closest_from_pango_font,
		gnome_font_face_find_closest_from_pango_description,
		gnome_font_face_find_from_family_and_style,
		gnome_font_face_get_font,
		gnome_font_face_get_font_default,
		gnome_font_face_is_italic,
		gnome_font_face_is_fixed_width,
		gnome_font_face_get_ascender,
		gnome_font_face_get_descender,
		gnome_font_face_get_underline_position,
		gnome_font_face_get_underline_thickness,
		gnome_font_face_get_num_glyphs,
		gnome_font_face_get_glyph_width,
		gnome_font_face_get_glyph_kerning
	
2003/09/06 19:23 rwmcfa1

	* Makefile.PL: dist-rpms build target added

	* perl-Gnome2-Prins.spec.in: initial import

2003/09/02 09:45 rwmcfa1

	* xs/GnomeFont.xs: xsubpp wants a blank line between each function,
	at least mine/most do. a couple of the ones commited below didn't have
	them.

2003/08/29 15:26 ebassi

	* xs/GnomeFont.xs: implemented more font size methods: 
	  	gnome_font_get_glyph_width,
	  	gnome_font_get_ascender,
	  	gnome_font_get_descender,
	  	gnome_font_get_underline_position,
	  	gnome_font_get_underline_thickness,
		gnome_font_get_width_utf8,
		gnome_font_get_width_utf8_sized
	* examples/basic-font.pl: changed the searched font name to
	  "Monospace Regular".
	
2003/08/23 10:25 ebassi
	
	* pm/Config.pm, pm/Font.pm: corrected some typos in the pod
	  documentation.
	
2003/08/22 12:37 ebassi

	* Makefile.PL: prefixed the filename of the man pages with the correct
	  namespace (Gnome2::*).

2003/08/22 02:19 muppetman

	* README: new file, need it if you're going to distribute

	* Print.pm: mangled my email, tailored Gtk2 text to Gnome2::Print

2003/08/21 0:41 ebassi

	* t/07.GnomePrintUnit.t: fixed GnomePrintUnit test.

2003/08/21 0:22 ebassi
	
	* xs/GnomePrintUnit.xs: implemented Gnome2::Print::Unit methods.